--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,21 @@ a {
 * {
   box-sizing: border-box;
 }
+
+
+input, textarea, select, button {
+  width : 300px;
+  padding: 5;
+  margin: 5;
+  box-sizing: border-box;
+  border: 1px solid #888; 
+}
+
+label {
+
+  margin-right: 10px;
+  font-size: 14pt;
+  width: 100px;
+  
+
+}
