--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -51,3 +51,62 @@
 .lightText {
   color: #666;
 }
+.card_title {
+  font-size: 24px;
+  margin: 0; 
+}
+.card_title-info {
+  font-size: 14px;
+  margin: 7px 0 10px; 
+}
+.card_button {
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  padding: 0 15px;
+  font-size: 18px;
+  line-height: 36px;
+  font-weight: 500;
+  margin: 25px 0 10px;
+  color: #fff;
+  background: linear-gradient(#ff6100, rgba(255, 80, 80, 1));
+  box-shadow: 0 2px 12px -3px rgba(255, 80, 80, 1);
+  opacity: 0.9;
+}
+.card_button:hover {
+  opacity: 1;
+  box-shadow: 0 2px 2px -3px rgba(255, 80, 80, 1);
+   
+}
+    
+.card_info{
+  font-size: 14px;
+}
+  
+.input{
+  display: flex;
+  flex-direction: column-reverse;
+  position: relative;
+  padding-top: 10px;
+}
+.input_label {
+  color: #8597a3;
+  margin-bottom: 10px;
+}
+
+.input_field{
+  padding: 0;
+  z-index: 1;
+  background-color: transparent;
+  border: 1px solid rgb(128, 99, 99);
+  font: inherit;
+  font-size: 14px;
+  line-height: 30px;
+  margin-bottom:20px;
+
+}
+.input_field:focus, .input_field:valid {
+  outline: 0;
+  border-color: #665856;
+}
+
