--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -88,6 +88,8 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   width: 45%;
+  position: relative;
+  z-index: 2;
 }
 
 .card:hover,
