--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,12 +16,28 @@ a {
 }
 
 
-input, textarea, select, button {
+input, textarea, select {
   width : 300px;
   padding: 5;
   margin: 5;
   box-sizing: border-box;
   border: 1px solid #888; 
+}
+
+button {
+
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  padding: 0 15px;
+  font-size: 18px;
+  line-height: 36px;
+  font-weight: 500;
+  margin: 25px 0 10px;
+  color: #fff;
+  background: linear-gradient(#ff6100, rgba(255, 80, 80, 1));
+  box-shadow: 0 2px 12px -3px rgba(255, 80, 80, 1);
+  opacity: 0.9;
 }
 
 label {
