--- a/components/header.module.css
+++ b/components/header.module.css
@@ -1,6 +1,6 @@
 /* Set min-height to avoid page reflow while session loading */
 .signedInStatus {
-  display: block;
+  display: inline-flex;
   min-height: 4rem;
   width: 100%;
 }
@@ -10,9 +10,8 @@
   position: relative;
   top: 0;
   opacity: 1;
-  overflow: hidden;
   border-radius: 0 0 .6rem .6rem;
-  padding: .6rem 1rem;
+  padding: .6rem 5rem;
   margin: 0;
   background-color: rgba(0,0,0,.05);
   transition: all 0.2s ease-in;
@@ -25,21 +24,17 @@
 
 .signedInText,
 .notSignedInText {
-  position: absolute;
+  position: relative;
   padding-top: .8rem;
-  left: 1rem;
-  right: 6.5rem;
   white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
   display: inherit;  
+  text-overflow: ellipsis;
   z-index: 1;
-  line-height: 1.3rem;
+  width: 50%;
 }
 
 .signedInText {
   padding-top: 0rem;
-  left: 4.6rem;
 }
 
 .avatar {
@@ -47,9 +42,19 @@
   float: left;
   height: 2.8rem;
   width: 2.8rem;
+  margin-right: 10px;
   background-color: white;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.signedOut {
+
+  width: 50%;
+}
+.signedInOut {
+
+  width: 100%;
 }
 
 .button,
@@ -92,6 +97,8 @@
 }
 
 .navigation {
-
-  text-align: center;
+  background-color: rgba(0,0,0,.05);
+  text-align: left;
+  padding-left:1rem;
+  width:80%;
 }
