--- a/styles/Decks.module.css
+++ b/styles/Decks.module.css
@@ -1,5 +1,5 @@
 .container {
-  min-height: 100px;
+  min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
@@ -95,7 +95,16 @@
  /* align-items: center;
   justify-content: center; */
   flex-wrap: wrap;
-  margin-top: 3rem;
+  margin-top: 1rem;
+}
+.categoryHeader {
+  display: flex;
+ /* align-items: center;
+  justify-content: center; */
+  flex-wrap: wrap;
+  margin-top: 1rem;
+  background-color: rgba(0,0,0,.15) ;
+  border-radius: 5px;
 }
 
 .card {
@@ -104,15 +113,13 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid #954544;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   position: relative;
   z-index: 2;
-  width: 300px;
-  min-height: 400px;
-  font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
-  font-size:xx-large;
+  min-height: 300px;
+  max-width: 200px;
 }
 
 .card:hover,
