--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -95,7 +95,16 @@
  /* align-items: center;
   justify-content: center; */
   flex-wrap: wrap;
-  margin-top: 3rem;
+  margin-top: 1rem;
+}
+.categoryHeader {
+  display: flex;
+ /* align-items: center;
+  justify-content: center; */
+  flex-wrap: wrap;
+  margin-top: 1rem;
+  background-color: rgba(0,0,0,.15) ;
+  border-radius: 5px;
 }
 
 .card {
@@ -104,7 +113,7 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid #954544;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   position: relative;
