--- a/styles/Decks.module.css
+++ b/styles/Decks.module.css
@@ -87,7 +87,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 100%;
   margin-top: 3rem;
 }
 .categoryLine {
