--- a/components/header.module.css
+++ b/components/header.module.css
@@ -30,7 +30,11 @@
   display: inherit;  
   text-overflow: ellipsis;
   z-index: 1;
-  width: 50%;
+  background-color: rgba(0,0,0,.15);;
+}
+
+.email {
+  margin: 0 5px 0 5px;
 }
 
 .signedInText {
