--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -118,6 +118,25 @@
   transition: color 0.15s ease, border-color 0.15s ease;
   position: relative;
   z-index: 2;
+  min-height: 250px;
+}
+.button{
+
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    padding: 5px 15px;
+    font-size: 18px;
+    line-height: 36px;
+    font-weight: 500;
+    margin: 25px 5px 10px;
+    color: #fff;
+    background: linear-gradient(#ff6100, rgba(255, 80, 80, 1));
+    box-shadow: 0 2px 12px -3px rgba(255, 80, 80, 1);
+    opacity: 0.9;
+    bottom:0px;
+    right: 1%;
+    position:absolute
 }
 
 .card:hover,
