--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -103,8 +103,10 @@
   justify-content: center; */
   flex-wrap: wrap;
   margin-top: 1rem;
-  background-color: rgba(0,0,0,.15) ;
+  background-color: rgba(0,0,0,0) ;
   border-radius: 5px;
+  font-weight: bold;
+  display:inline;
 }
 
 .card {
