--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: Arial,-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: rgba(0,0,0,.05);
+ /* background-color: rgba(0,0,0,.05); */
+ background-color: #f8f5f5;
 
 }
 
