--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -114,8 +114,9 @@
   padding: 1.5rem;
   text-align: left;
   color: inherit;
+  background-color: white;
   text-decoration: none;
-  border: 1px solid #954544;
+  border: 1px solid #eeebed ;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   position: relative;
@@ -139,6 +140,35 @@
     bottom:0px;
     right: 1%;
     position:absolute
+}
+.createdBy{
+
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  padding: 5px 15px;
+  font-size: 10px;
+  line-height: 15px;
+  font-weight: 500;
+  color: #000;
+  bottom:10px;
+  left: 1%;
+  position:absolute
+}
+.description{
+  font-size: 15px;
+  white-space: pre-wrap;
+  width: 80%;
+  text-align:justify;
+  color: #425466;
+  padding-top: 10px;
+
+}
+
+.deckImage{
+  height:50px;
+  margin-right:15px;
+
 }
 
 .card:hover,
